change all dx and dy

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,7 @@
 #               FLAG_5 = -DCOUPLING
 #             FLAG_6 = -DZALPHA
 #              FLAG_7 = -DMANNING
-                FLAG_8 = -DVESSEL
+#                FLAG_8 = -DVESSEL
 #               FLAG_9 = -DMETEO
 #              FLAG_10 = -DWIND
 #               FLAG_11 = -DSEDIMENT
