--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@
 #--------------------------------------------------------------------------
 
 #            FLAG_1 = -DDOUBLE_PRECISION 
-             FLAG_2 = -DPARALLEL
+#             FLAG_2 = -DPARALLEL
              FLAG_3 = -DCARTESIAN
 #              FLAG_4 = -DINTEL
 #               FLAG_5 = -DCOUPLING
